--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -20,22 +20,35 @@
             <tr>
                 <td>Name</td>
                 <td th:text="${job.getName()}"></td>
+
             </tr>
             <tr>
                 <td>Employer</td>
-                <td th:text="${job.getEmployer()}"></td>
+                <td>
+                    <a th:text="${job.getEmployer()}"
+                       th:href="@{/list/jobs(column=employer,value=${job.getEmployer()})}"></a>
+                </td>
             </tr>
             <tr>
                 <td>Location</td>
-                <td th:text="${job.getLocation()}"></td>
+                <td>
+                    <a th:href="@{/list/jobs(column=location,value=${job.getLocation()})}"
+                       th:text="${job.getLocation()}"></a>
+                </td>
             </tr>
             <tr>
                 <td>Position Type</td>
-                <td th:text="${job.getPositionType()}"></td>
+                <td>
+                    <a th:href="@{/list/jobs(column=positionType,value=${job.getPositionType()})}"
+                       th:text="${job.getPositionType()}"></a>
+                </td>
             </tr>
             <tr>
                 <td>Skill</td>
-                <td th:text="${job.getCoreCompetency()}"></td>
+                <td>
+                    <a th:href="@{/list/jobs(column=coreCompetency,value=${job.getCoreCompetency()})}"
+                       th:text="${job.getCoreCompetency()}"></a>
+                </td>
             </tr>
         </table>
     </th:block>
